--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,8 @@ width: 200px;
     color: black;
 }
 .active-menu{
-    background-color: #ccddff;
-}
-.menu-item:hover{
+    background-color: #ccddff;}
+    .menu-item:hover{
     background-color: #ccddff;
 }
 .menu-img{
@@ -40,3 +39,57 @@ width: 200px;
 .menu-text{
  margin-left: 10px;
 }
+.bottom-navigation-bar{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: pink;
+    display: none;
+}
+.bottom-nevigation-bar{
+    display: flex;
+    justify-content: space-around;
+}
+.bottom-menu-icon{
+    background-color: #fff;
+    margin: 5px;
+    height: 25px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.bottom-menu-icon-active{
+ background-color: #ccddff
+}
+/* small devices */
+@media screen and (min-width: 600px){
+    .sidebar{display: none;}
+    .bottom-navigation-bar{
+        display: flex;
+        justify-content: space-around;
+    
+    }
+}
+
+   /* normal Devices */
+
+   @media screen and (min-width: 601px) and (max-width: 768px) {
+.sidebar{display: none;}
+.bottom-navigation-bar{display: flex;
+justify-content: space-around;}
+
+   }
+ 
+
+  /* Tablet Devices */
+
+  @media screen and (min-width: 769px) and (max-width: 992px) {
+  
+  }
+
+  /* large device */
+
+  @media screen and (min-width: 993px) and (max-width: 1200px) {
+    
+  }
+    
